--- a/style.css
+++ b/style.css
@@ -2,4 +2,49 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+ 
 }
+
+h1   {
+  text-align: center;
+}
+
+nav   {
+  text-align: center;
+}
+
+a    {
+  background-color: aqua;
+  padding: 10px;
+}
+
+img {
+  display: block;
+  margin: auto;
+}
+figcaption  {
+  text-align: center;
+  font-size: 15px;
+}
+
+p {
+
+  text-align: center;
+}
+#details   {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+}
+
+/* Responsive footer */
+@media (max-width: 768px) {
+  .footer-content {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  }
